--- a/index.html
+++ b/index.html
@@ -47,21 +47,18 @@
     <div class="container">
         <div class="content">
             <h2>About Me</h2>
-            <p>Welcome to my personal webpage! ICurrently, I am a PhD Candidate in the Department of Agricultural and Resource Economics at the UWA. 
+            <p>Welcome to my personal webpage! ICurrently, I am a PhD Candidate in the <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">Department of Agricultural and Resource Economics at the UWA</a>
               I am interested in the economics and underpinnings of voluntary cooperation, and the effectiveness of social incentives as a lever for aligning personal interests with collective interests. 
               My research focuses on studying the role of social norms in enhancing the effects of financial incentives on cooperative behaviour and how social norm enforcement mechanisms should be designed to trigger cooperative normative change.</p>
           
-            <h2>Projects</h2>
-            <ul>
-                <li>Project 1: Brief description</li>
-                <li>Project 2: Brief description</li>
-                <li>Project 3: Brief description</li>
-            </ul>
+            <h2>Research Interests</h2>
+            <p>Behavioural and Experimental economics · Collective action problems · Climate change · Social norms</p>
             
             <h2>Contact</h2>
-            <p>Email: your.email@example.com</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">Your LinkedIn Profile</a></p>
-            <p>GitHub: <a href="https://github.com/yourusername">Your GitHub Profile</a></p>
+            <p>Email: daniel.martinezfelip@research.uwa.edu.au</p>
+            <p>Google Scholar: <a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">My Google Scholar profile</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">My LinkedIn Profile</a></p>
+            <p>GitHub: <a href="https://github.com/yourusername">My GitHub Profile</a></p>
         </div>
     </div>
 </body>
