--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="container">
         <div class="content">
-            <img src="path/to/your/image.jpg" alt="Daniel Martínez Felip">
+            <img src="me.jpg" alt="Daniel Martínez Felip">
             <div class="text">
                 <h2>About Me</h2>
                 <p>Welcome to my personal webpage! Currently, I am a PhD Candidate in the <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">Department of Agricultural and Resource Economics at the UWA</a>.</p>
