--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -67,7 +67,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="Curriculum_Vitae.html">Curriculum Vitae</a></li>
+                    <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
                 </ul>
             </nav> 
         </div>
