--- a/index.html
+++ b/index.html
@@ -63,15 +63,13 @@
 <body>
     <header>
         <div class="container">
-            <h1>Daniel Martínez Felip</h1>
+             <h1>Daniel Martínez Felip</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="research.html">Research</a></li>
-                    <li><a href="publications.html">Publications</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
                 </ul>
-            </nav>
+            </nav> 
         </div>
     </header>
 
