--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -72,8 +72,9 @@
         </div>
     </header>
 
-    <p>For a detailed version of my CV, please click: <a href="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view">HERE</a></p>
-    
+    <div class="center-text">
+        <p>For a detailed version of my CV, please click: <a href="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view">HERE</a></p>
+    </div>    
     <div class="container">
         <div class="content">
             <div class="section">
