--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
                 
                 <h2>Contact</h2>
                 <p>Email: daniel.martinezfelip@research.uwa.edu.au</p>
-                <p><img src="Scholar.PNG" alt="Google Scholar">
+                <p><img src="scholar_logo.png" alt="Google Scholar">
                     <a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">My Google Scholar profile</a></p>
-                <p>LinkedIn: <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">My LinkedIn Profile</a></p>
+                <p><img src="linkedin_logo.png" alt="Google Scholar"> 
+                    <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">My LinkedIn Profile</a></p>
             </div>
         </div>
     </div>
