--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Martínez Felip - Curriculum Vitae</title>
+    <title>Curriculum Vitae</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,15 +70,14 @@
                 </ul>
             </nav>
         </div>
-    </header>
-
-    <div class="center-text">
-        <p>For a detailed version of my CV, please click: <a href="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view">HERE</a></p>
-    </div>    
+    </header>  
+    
     <div class="container">
+        <div class="center-text">
+        <p>For a detailed version of my CV, please click: <a href="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view">HERE</a></p>
+        </div>  
         <div class="content">
             <div class="section">
-                <h2>Curriculum Vitae</h2>
                 <p><b>PhD in Economics (In progress)</b></p>
                 <p>The University of Western Australia (UWA)</p>
                 
