--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae</title>
+    <title>Daniel Martínez Felip - Curriculum Vitae</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,7 +63,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Daniel Martínez Felip</h1>
+            <h1>Curriculum Vitae</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
