--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -58,6 +58,10 @@
         .bold {
             font-weight: bold;
         }
+        .center-text {
+            text-align: center;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
@@ -74,7 +78,7 @@
     
     <div class="container">
         <div class="center-text">
-        <p>For a detailed version of my CV, please click: <a href="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view">HERE</a></p>
+            <p>For a detailed version of my CV, please click: <a href="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view">HERE</a></p>
         </div>  
         <div class="content">
             <div class="section">
