--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             padding-bottom: 5px;
         }
         a {
-            color: #2c3e50;
+            color: #1a73e8; /* Blue color for links */
             text-decoration: none;
         }
         a:hover {
