--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
                         <p>Email: daniel.martinezfelip@research.uwa.edu.au</p>
                         <p><a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">My Google Scholar profile</a></p>
                         <p><a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">My LinkedIn Profile</a></p>
+                        <h2>Useful Open Source Software</h2>
+                        <p><a href="https://www.otree.org/">oTree</a></p>
+                        <p><a href="https://cran.r-project.org/">R Project</a> and <a href="https://posit.co/">R Studio</a></p>
+                        <p><a href="https://www.latex-project.org/get/">LaTeX Project</a>and <a href="https://www.texstudio.org/">TeX Studio</a></p>
+                        <p><a href="https://pandoc.org/">Pandoc</a></p>
+                        <h2>Useful Links</h2>
+                        <p><a href="https://mnstats.morris.umn.edu/introstat/nonparametric/learningtools.html">Nonparametric Tests</a></p>
+                        <p><a href="https://cran.r-project.org/web/packages/gmoTree/vignettes/intro_to_gmoTree.html">gmoTree</a></p>                        
                     </td>
                     <td class="text">
                         <h2>About Me</h2>
