--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
                         <img src="me.jpg" alt="Daniel Martínez Felip">
                         <h2>Contact</h2>
                         <p>Email: daniel.martinezfelip@research.uwa.edu.au</p>
+                        <p><a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">My UWA profile</a></p>
                         <p><a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">My Google Scholar profile</a></p>
                         <p><a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">My LinkedIn Profile</a></p>
                         <h2>Useful Open Source Software</h2>
                         <p><a href="https://www.otree.org/">oTree</a></p>
-                        <p><a href="https://cran.r-project.org/">R Project</a> and <a href="https://posit.co/">R Studio</a></p>
-                        <p><a href="https://www.latex-project.org/get/">LaTeX Project</a> and <a href="https://www.texstudio.org/">TeX Studio</a></p>
+                        <p><a href="https://cran.r-project.org/">R Project</a> & <a href="https://posit.co/">R Studio</a></p>
+                        <p><a href="https://www.latex-project.org/get/">LaTeX Project</a> & <a href="https://www.texstudio.org/">TeX Studio</a></p>
                         <p><a href="https://pandoc.org/">Pandoc</a></p>
                         <h2>Useful Links</h2>
                         <p><a href="https://mnstats.morris.umn.edu/introstat/nonparametric/learningtools.html">Nonparametric Tests</a></p>
@@ -127,7 +128,7 @@
                     </td>
                     <td class="text">
                         <h2>About Me</h2>
-                        <p>Currently, I am a PhD Candidate in the <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">Department of Agricultural and Resource Economics at the UWA</a>. I am interested in the economics and underpinnings of voluntary cooperation, and the effectiveness of social incentives as a lever for aligning personal interests with collective interests. My research focuses on studying the role of social norms in enhancing the effects of financial incentives on cooperative behaviour and how social norm enforcement mechanisms should be designed to trigger cooperative normative change.</p>
+                        <p>Currently, "Currently, I am a PhD Candidate in the <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">Center for Environmental Economics & Policy</a> at the UWA School of Agriculture and Environment. I am interested in the economics and underpinnings of voluntary cooperation, and the effectiveness of social incentives as a lever for aligning personal interests with collective interests. My research focuses on studying the role of social norms in enhancing the effects of financial incentives on cooperative behaviour and how social norm enforcement mechanisms should be designed to trigger cooperative normative change.</p>
                         <h2>Research Interests</h2>
                         <p>Behavioural and Experimental economics · Collective action problems · Climate change · Social norms</p>
                     </td>
