--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             max-width: 100%;
             height: auto;
             border-radius: 5px;
+            object-fit: contain; /* Ensure the image scales down properly */
         }
         .text {
             width: 75%;
