--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         .image-contact img {
             max-width: 80%;
-            height: auto;
+            height: 80%;
             border-radius: 5px;
             object-fit: contain; /* Ensure the image scales down properly */
         }
