--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
+                    <li><a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">Reserach</a></li>
                 </ul>
             </nav>
         </header>
