--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
                     <td class="image-contact">
                         <img src="me.jpg" alt="Daniel Martínez Felip">
                         <h2>Contact</h2>
-                        <p>Email: daniel.martinezfelip@research.uwa.edu.au</p>
+                        <p>Email:<a href="daniel.martinezfelip@research.uwa.edu.au">daniel.martinezfelip@research.uwa.edu.au</a></p>
                         <p><a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">My UWA profile</a></p>
-                        <p><a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">My Google Scholar profile</a></p>
                         <p><a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">My LinkedIn Profile</a></p>
                         <h2>Useful Open Source Software</h2>
                         <p><a href="https://www.otree.org/">oTree</a></p>
