--- a/index.html
+++ b/index.html
@@ -145,7 +145,12 @@
                                 daniel.martinezfelip@research.uwa.edu.au
                             </a>
                         </p>
-                        <p><a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">My UWA profile</a></p>
+                        <p class="contact-info">
+                            <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">
+                                <i class="fas fa-graduation-cap"></i>
+                                My UWA profile
+                            </a>
+                        </p>                        
                         <p class="contact-info">
                             <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">
                                 <i class="fab fa-linkedin"></i>
