--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
                                 <i class="fas fa-graduation-cap"></i>
                                 My UWA profile
                             </a>
+                        <p class="contact-info">
+                            <a href="https://orcid.org/0009-0000-6979-904X">
+                                <i class="fab fa-orcid"></i>
+                                My ORCiD Profile
+                            </a>
+                        </p>
                         </p>                        
                         <p class="contact-info">
                             <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">
