--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <p class="contact-info">
                             <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip">
                                 <i class="fas fa-graduation-cap"></i>
-                                My UWA profile
+                                My UWA Profile
                             </a>
                         <p class="contact-info">
                             <a href="https://orcid.org/0009-0000-6979-904X">
