--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
                                 My ORCiD Profile
                             </a>
                         </p>
+                        <p class="contact-info">
+                            <a href="https://www.researchgate.net/profile/Daniel-Martinez-Felip">
+                                <i class="fab fa-researchgate"></i>
+                                My ResearchGate Profile
+                            </a>
+                        </p>
                         </p>                        
                         <p class="contact-info">
                             <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">
