--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -102,8 +102,9 @@
             <h1>Daniel Martínez Felip</h1>
             <h2>Curriculum Vitae</h2>
             <nav>
-                <a href="index.html">Home</a>
-            </nav>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">Research</a></li>
+</nav>
         </header>
         
         <div class="center-text">
