--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -103,7 +103,7 @@
             <h2>Curriculum Vitae</h2>
             <nav>
                 <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="main.html">Home</a></li>
                 <li><a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">Research</a></li>
                 </ul>
 </nav>
