--- a/main.html
+++ b/main.html
@@ -150,6 +150,7 @@
                                 <i class="fas fa-graduation-cap"></i>
                                 My UWA Profile
                             </a>
+                        </p> <!-- Correctly closed this p tag -->
                         <p class="contact-info">
                             <a href="https://orcid.org/0009-0000-6979-904X">
                                 <i class="fab fa-orcid"></i>
@@ -162,7 +163,6 @@
                                 My ResearchGate Profile
                             </a>
                         </p>
-                        </p>                        
                         <p class="contact-info">
                             <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">
                                 <i class="fab fa-linkedin"></i>
