--- a/index.html
+++ b/index.html
@@ -150,7 +150,14 @@
                                 <i class="fas fa-graduation-cap"></i>
                                 My UWA Profile
                             </a>
-                        </p> <!-- Correctly closed this p tag -->
+                        </p> 
+                        <p class="contact-info">
+                            <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">
+                                <i class="fab fa-linkedin"></i>
+                                My LinkedIn Profile
+                            </a>
+                        </p>
+                        <h2>Academic Research Networks and Databases</h2>
                         <p class="contact-info">
                             <a href="https://orcid.org/0009-0000-6979-904X">
                                 <i class="fab fa-orcid"></i>
@@ -158,15 +165,10 @@
                             </a>
                         </p>
                         <p class="contact-info">
-                            <a href="https://www.researchgate.net/profile/Daniel-Martinez-Felip">
+                            <a 
+href="https://www.researchgate.net/profile/Daniel-Martinez-Felip">
                                 <i class="fab fa-researchgate"></i>
                                 My ResearchGate Profile
-                            </a>
-                        </p>
-                        <p class="contact-info">
-                            <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4">
-                                <i class="fab fa-linkedin"></i>
-                                My LinkedIn Profile
                             </a>
                         </p>
                         <h2>Useful Open Source Software</h2>
