--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">Research</a></li>
                     <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
                 </ul>
             </nav>
@@ -135,7 +134,7 @@
                 <tr>
                     <td class="image-contact">
                         <img src="me.jpg" alt="Daniel Martínez Felip">
-                         <h2>Academic Research Networks and Databases</h2>
+                         <h2>Research</h2>
 <p class="contact-info">
                             <a 
 href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">
