--- a/index.html
+++ b/index.html
@@ -138,15 +138,19 @@
 <p class="contact-info">
                             <a 
 href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">
-                                <i class="fab fa-google"></i>
-                                My Google Scholar Profile
+                                Google Scholar
                             </a>
                         </p>
                         <p class="contact-info">
                             <a 
 href="https://www.researchgate.net/profile/Daniel-Martinez-Felip">
-                                <i class="fab fa-researchgate"></i>
-                                My ResearchGate Profile
+              ResearchGate
+                            </a>
+                        </p>
+<p class="contact-info">
+                            <a 
+href="https://authors.repec.org/pro/pma3358/">
+              RePEc
                             </a>
                         </p>
                         <h2>Useful Open Source Software</h2>
