--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                          <h2>Research</h2>
                         <p class="contact-info"> 
                             <a 
-                            href="osf.io/3fycp">
+                            href="https://osf.io/3fycp/">
                         </p>
                                 OSF
                             </a>
