--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ href="https://www.researchgate.net/profile/Daniel-Martinez-Felip">
                         </p>
 <p class="contact-info">
                             <a 
-href="https://authors.repec.org/pro/pma3358/">
+href="https://ideas.repec.org/f/pma3358.html">
               RePEc
                             </a>
                         </p>
