--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Daniel Martínez Felip - About</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Daniel Martínez Felip - PhD Candidate at UWA. Research in behavioral and experimental economics, social norms, and collective action.">
+    <meta name="description" content="Daniel Martinez Felip - PhD Candidate at UWA. Research in behavioral and experimental economics, social incentives, social norms, and collective action problems.">
     <meta name="keywords" content="Daniel Martínez Felip, behavioral economics, experimental economics, social norms, cooperation, UWA, environmental policy">
     <meta name="author" content="Daniel Martínez Felip">
     <link rel="canonical" href="https://danielmartinezfelip.github.io/personal-website/">
