--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -104,6 +104,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="research.html">Home</a></li>
                 </ul>
             </nav>
         </header>
