--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Martínez Felip - Curriculum Vitae</title>
+    <title>Daniel Martínez Felip - Research</title>
     <style>
         body {
             font-family: 'Cambria', 'Times New Roman', serif;
@@ -104,6 +104,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="curriculum_vitae.html">Home</a></li>
                 </ul>
             </nav>
         </header>
