--- a/teaching.html
+++ b/teaching.html
@@ -104,7 +104,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="curriculum_vitae.html">Home</a></li>
+                    <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
                 </ul>
             </nav>
         </header>
