--- a/teaching.html
+++ b/teaching.html
@@ -105,6 +105,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
+                    <li><a href="research.html">Research</a></li>
                 </ul>
             </nav>
         </header>
