--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -104,7 +104,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="research.html">Home</a></li>
+                    <li><a href="teaching.html">Teaching</a></li>
+                    <li><a href="research.html">Research</a></li>
                 </ul>
             </nav>
         </header>
