--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="teaching.html">Teaching</a></li>
+                    <li><a href="curriculum_vitae.html">Education</a></li>
                 </ul>
             </nav>
         </header>
