--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Martínez Felip - Curriculum Vitae</title>
+    <title>Daniel Martínez Felip - Education</title>
     <style>
         body {
             font-family: 'Cambria', 'Times New Roman', serif;
@@ -104,8 +104,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="teaching.html">Teaching</a></li>
                     <li><a href="research.html">Research</a></li>
+                    <li><a href="teaching.html">Teaching</a></li>
                 </ul>
             </nav>
         </header>
