--- a/research.html
+++ b/research.html
@@ -104,7 +104,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
+                    <li><a href="curriculum_vitae.html">Education</a></li>
                     <li><a href="teaching.html">Teaching</a></li>
                 </ul>
             </nav>
