--- a/teaching.html
+++ b/teaching.html
@@ -104,8 +104,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="curriculum_vitae.html">Curriculum Vitae</a></li>
                     <li><a href="research.html">Research</a></li>
+                    <li><a href="curriculum_vitae.html">Education</a></li>
                 </ul>
             </nav>
         </header>
