--- a/teaching.html
+++ b/teaching.html
@@ -100,7 +100,7 @@
     <div class="container">
         <header>
             <h1>Daniel Martínez Felip</h1>
-            <h2>Curriculum Vitae</h2>
+            <h2>Teaching</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -114,7 +114,7 @@
         <div class="content">
             <div class="section">
                 <h2>Teaching</h2>
-                
+                Environmental Economics, The University of Western Australia, UWA (2024)
             </div>
         </div>
     </div>
