--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@
     <div class="container">
         <header>
             <h1>Daniel Martínez Felip</h1>
-            <h2>Curriculum Vitae</h2>
+            <h2>Research</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
