--- a/research.html
+++ b/research.html
@@ -104,8 +104,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="curriculum_vitae.html">Education</a></li>
                     <li><a href="teaching.html">Teaching</a></li>
+                    <li><a href="curriculum_vitae.html">CV</a></li>
                 </ul>
             </nav>
         </header>
