--- a/teaching.html
+++ b/teaching.html
@@ -105,7 +105,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="research.html">Research</a></li>
-                    <li><a href="curriculum_vitae.html">Education</a></li>
+                    <li><a href="curriculum_vitae.html">CV</a></li>
                 </ul>
             </nav>
         </header>
