--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="teaching.html">Teaching</a></li>
-                    <li><a href="curriculum_vitae.html">Education</a></li>
+                    <li><a href="curriculum_vitae.html">CV</a></li>
                 </ul>
             </nav>
         </header>
