--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -100,7 +100,7 @@
     <div class="container">
         <header>
             <h1>Daniel Martínez Felip</h1>
-            <h2>Education</h2>
+            <h2>Curriculum Vitae</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -116,7 +116,7 @@
         
         <div class="content">
             <div class="section">
-                <h2>Education</h2>
+                <h2>Curriculum Vitae</h2>
                 <div class="education-item">
                     <h3>PhD in Economics (In progress)</h3>
                     <p>The University of Western Australia (UWA)</p>
