--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Martínez Felip - Education</title>
+    <title>Daniel Martínez Felip - Curriculum Vitae</title>
     <style>
         body {
             font-family: 'Cambria', 'Times New Roman', serif;
@@ -54,44 +54,18 @@
             padding: 30px;
             border: 1px solid #ddd;
         }
-        .content-table {
+        .center-text {
+            text-align: center;
+            margin-top: 20px;
+        }
+        iframe {
             width: 100%;
-            border-collapse: collapse;
-        }
-        .content-table td {
-            vertical-align: top;
-            padding: 10px;
-        }
-        .image-contact {
-            width: 25%;
-        }
-        .image-contact img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .text {
-            width: 75%;
-        }
-        h2 {
-            color: #2c3e50;
-            border-bottom: 1px solid #2c3e50;
-            padding-bottom: 5px;
-        }
-        a {
-            color: #1a73e8; /* Blue color for links */
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
+            height: 800px;
+            border: none;
         }
         @media (max-width: 768px) {
-            .content-table, .content-table tbody, .content-table tr, .content-table td {
-                display: block;
-                width: 100%;
-            }
-            .image-contact, .text {
-                width: 100%;
+            .content {
+                padding: 15px;
             }
         }
     </style>
@@ -111,27 +85,8 @@
         </header>
         
         <div class="center-text">
-            <p>For a detailed version of my CV, please click <a href="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view">here</a>.</p>
-        </div>
-        
-        <div class="content">
-            <div class="section">
-                <h2>Curriculum Vitae</h2>
-                <div class="education-item">
-                    <h3>PhD in Economics (In progress)</h3>
-                    <p>The University of Western Australia (UWA)</p>
-                </div>
-                <div class="education-item">
-                    <h3>MSc in Economics: Empirical Applications and Policies</h3>
-                    <p>University of the Basque Country (UPV/EHU), 2022</p>
-                </div>
-                <div class="education-item">
-                    <h3>BA in Economics (Academic Excellence Award)</h3>
-                    <p>University Jaume I of Castelló (UJI), 2021</p>
-                </div>
-            </div>
+            <iframe src="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/view?usp=sharing"></iframe>
         </div>
     </div>
 </body>
 </html>
-
