--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -85,7 +85,7 @@
         </header>
         
         <div class="center-text">
-            <iframe src="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/preview></iframe>
+            <iframe src="https://drive.google.com/file/d/1Qcd1RsIZCW6NNIXcbh4fLxENtFgU1kEv/preview"></iframe>
         </div>
     </div>
 </body>
