--- a/research.html
+++ b/research.html
@@ -113,8 +113,13 @@
         
         <div class="content">
             <div class="section">
-                <h2>Working papers</h2>
-                "How does experienced behavior change normative expectations regarding socially beneficial actions?" With Steven G.M. Schilizzi and Chi Nguyen
+                <h2>Working Papers</h2>
+                <p>
+                    <a href="https://doi.org/10.31235/osf.io/vy6z2_v1" target="_blank">
+                        "How does experienced behavior change normative expectations regarding socially beneficial actions?"
+                    </a> 
+                    with Steven G.M. Schilizzi and Chi Nguyen
+                </p>
             </div>
         </div>
     </div>
